# A-Fair-Made-Twice

./: .gitignore  Originals Metadata.xlsx  README.md  RestoredStereoManifest.csv  RestoredStereo_withArchiveID.csv  generate_exhibits.cjs  initial.data.js  initial.html  paris.yml  prelude.html  pyproject.toml  unfinished.data.js  unfinished.html
assets/css/: initial.css  prelude.css  unfinished.css
assets/js/: ambient.js  data-loader.js  initial-app.bundle.js  initial-app.js  initial-local.js  prelude-bg.js  prelude-sequencer.js  unfinished-world.js  unfinished.js  utils.js
docker/: docker-compose.yml
museum_multidiscourse_semantic_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_initial_payload.py  recompute_umap3d.py
server/: Dockerfile  index.js  package-lock.json  package.json
src/: __init__.py  config.py  models.py
src/aggregation/: __init__.py  embeddings.py  profiles.py
src/analysis/: __init__.py  coordinates.py  discourse.py  similarity.py
src/cli/: __init__.py  main.py
src/extraction/: __init__.py  service.py
src/ingestion/: __init__.py  chunking.py  dify_workflow.py  documents.py  metadata.py  mineru.py  text_extraction.py
src/llm/: __init__.py  client.py  metadata_translation.py  prompts.py
src/retrieval/: __init__.py  embeddings.py  indexing.py  pipeline.py  query_generation.py  reranking.py
src/storage/: __init__.py  files.py  qdrant_store.py
src/visualization/: __init__.py  plotly_map.py
tools/: join_archive_id.py
